@@ -17,6 +17,9 @@ Module containing test cases.
 \fB-p\fR, \fB--package\fR <package>
 Package containing modules that contain test cases.
 trial loads modules named 'test_' within the given package.
+.TP
+\fB-l\fR, \fB--logfile\fR <logfile>
+Log exceptions (and other things) to the given logfile.
 .SH AUTHOR
 Written by Jonathan M. Lange
 .SH "REPORTING BUGS"
